annos and wanr suppressions