@@ -121,6 +121,17 @@
 			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
+		<dependency>
+			<groupId>org.checkerframework</groupId>
+			<artifactId>checker-qual</artifactId>
+			<version>3.14.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.errorprone</groupId>
+			<artifactId>javac</artifactId>
+			<version>9+181-r4173-1</version>
+		</dependency>
 	</dependencies>
 
 
@@ -128,13 +139,44 @@
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
 			<plugin>
+				<!-- This plugin will set properties values using dependency information -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>properties</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.8.1</version>
 				<configuration>
+					<fork>true</fork>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<encoding>${project.encoding}</encoding>
+					<compilerArguments>
+						<Xmaxerrs>10000</Xmaxerrs>
+						<Xmaxwarns>10000</Xmaxwarns>
+					</compilerArguments>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.checkerframework</groupId>
+							<artifactId>checker</artifactId>
+							<version>3.14.1-SNAPSHOT</version>
+						</path>
+					</annotationProcessorPaths>
+					<annotationProcessors>
+						<!-- Add all the checkers you want to enable here -->
+						<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
+					</annotationProcessors>
+					<compilerArgs>
+						<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -162,5 +204,110 @@
 		<jsp-api.version>2.2</jsp-api.version>
 		<servlet-api.version>2.4</servlet-api.version>
 		<project.encoding>UTF-8</project.encoding>
+		<!-- These properties will be set by the Maven Dependency plugin -->
+		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>checkerframework</id>
+			<activation>
+				<jdk>[1.8,13)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+							<compilerArguments>
+								<Xmaxerrs>10000</Xmaxerrs>
+								<Xmaxwarns>10000</Xmaxwarns>
+							</compilerArguments>
+							<annotationProcessorPaths>
+								<path>
+									<groupId>org.checkerframework</groupId>
+									<artifactId>checker</artifactId>
+									<version>3.14.1-SNAPSHOT</version>
+								</path>
+							</annotationProcessorPaths>
+							<annotationProcessors>
+								<!-- Add all the checkers you want to enable here -->
+								<annotationProcessor>org.checkerframework.checker.iteration.IterationChecker</annotationProcessor>
+							</annotationProcessors>
+							<compilerArgs>
+								<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.checkerframework</groupId>
+					<artifactId>checker</artifactId>
+					<version>3.14.1-SNAPSHOT</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>checkerframework-jdk8</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
+			<properties>
+				<javac.version>9+181-r4173-1</javac.version>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.google.errorprone</groupId>
+					<artifactId>javac</artifactId>
+					<version>9+181-r4173-1</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<fork>true</fork>
+							<compilerArgs combine.children="append">
+								<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
+								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>checkerframework-jdk11</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<fork>true</fork>
+							<compilerArgs combine.children="append">
+								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<properties>
+				<!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 is fixed). -->
+				<animal.sniffer.skip>true</animal.sniffer.skip>
+			</properties>
+		</profile>
+	</profiles>
 </project>
